--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>99 Lines of Code in the File</title>
 </head>
 <body>
+    <button  type="button" id="btn1">Sing!</button>
     <h1>My Singing Friends</h1>
     <div class="friend">
         <p>Batman</p>
